# rouillecloud

./: Cargo.toml  README.md  config.toml  lib.rs  main.rs  mod.rs
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/api/: auth.rs  files.rs  mod.rs  websocket.rs
server/src/auth/: mod.rs
server/src/caldav/: mod.rs
server/src/config/: database.rs  mod.rs  monitoring.rs  server.rs  storage.rs
server/src/monitoring/: mod.rs
server/src/plugins/: auth_local.rs  dynamic_loader.rs  manager.rs  mod.rs  monitoring_prometheus.rs  storage_local.rs  traits.rs
server/src/storage/: mod.rs
server/src/sync/: mod.rs
server/src/webdav/: mod.rs
server/static/: app.js  file_ops.d.ts  file_ops.js  index.html  style.css  types.d.ts
shared/crypto/: Cargo.toml
shared/crypto/src/: encryption.rs  hashing.rs  key_derivation.rs  lib.rs  password.rs
shared/protocol/: Cargo.toml
shared/protocol/src/: auth.rs  caldav.rs  errors.rs  file.rs  lib.rs  sync.rs  webdav.rs
shared/sync-core/: Cargo.toml
shared/sync-core/src/: delta.rs  lib.rs
