[package]
name = "rouillecloud"
version = "0.1.0"
edition = "2021"
authors = ["Guillaume Gielly <guillaume@dialup.fr"]
description = "High-performance file sharing server"
license = "GPL 3.0"

[dependencies]
# Web framework and HTTP
actix-web = { version = "4.4", features = ["rustls"] }
actix-files = "0.6"
actix-multipart = "0.7.2"
actix-cors = "0.7.1"
actix-web-actors = "4.2"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "sqlite",
    "chrono",
    "uuid",
    "json",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1.5"
mime = "0.3"
bytes = "1.5"

# Encryption and security
aes-gcm = "0.10"
jsonwebtoken = "9.2"
argon2 = "0.5"
rand = "0.9.1"

# Logging and monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Configuration
config = "0.15.13"
clap = { version = "4.4", features = ["derive"] }
toml = "0.9.2"

# WebDAV and HTTP utilities
http = "1.3.1"
url = "2.5"

# File operations
walkdir = "2.4"
notify = "8.1.0"

# Compression
zstd = "0.13"

# Cache
redis = { version = "0.32.4", features = [
    "aio",
    "tokio-comp",
], optional = true }

# Shared workspace dependencies
protocol = { path = "../shared/protocol" }
crypto = { path = "../shared/crypto" }
sync-core = { path = "../shared/sync-core" }
actix = "0.13.5"
zeroize = "1.8.1"

[features]
default = ["redis-cache"]
redis-cache = ["redis"]

[dev-dependencies]
tempfile = "3.8"
mockall = "0.13.1"
